Inventory/inventory.css
/*
==============================================================
Inventory - by Joshua R Jones
The General Metrics Web Development Company
http://general-metrics.com
Copyright (c) 2009 The General Metrics Web Development Company
==============================================================
master.css
*/

#inv_anchor {
	width: 70px;
	height: 35px;
	position: fixed;
	bottom: 0;
	right: 18px;
	overflow: hidden;
}

#inv_holder {
	width: 56px;
	margin: 5px 0 0 3px;
	border: 1px solid #222;
	-webkit-border-top-right-radius: 5px;
	-webkit-border-top-left-radius: 5px;
	-moz-border-radius-topright: 5px;
	-moz-border-radius-topleft: 5px;
	-webkit-box-shadow: 0 0 2px #000;
	-moz-box-shadow: 0 0 2px #000;
}

#inv_button {
	width: 50px;
	height: 25px;
	padding: 2px;
	display: block;
	background: #000;
	background: #696969 -webkit-gradient(linear, left top, left bottom, from(#696969), color-stop(.45, #3b3a3a), color-stop(.5, #2f2e2e), color-stop(.8, #373737), to(#666)) top left no-repeat;
	border: 1px solid #868686;
	font-family: "Courier-New";
	font-size: 24px;
	font-weight: bold;
	text-align: center;
	line-height: 22px;
	color: #fff;
	text-shadow: 0px -1px 1px #000;
	-webkit-border-top-right-radius: 5px;
	-webkit-border-top-left-radius: 5px;
	-moz-border-radius-topright: 5px;
	-moz-border-radius-topleft: 5px;
}

#inv_button:hover {
	cursor: pointer;
}

#inv_button:active {
	background: #000 -webkit-gradient(linear, left top, left bottom, from(#171717), to(#696969)) top left no-repeat;
}

#inv_files {
	position: fixed;
	bottom: 30px;
	right: 26px;
	z-index: 1000;
	font-family: "Lucida Grande", Arial, Verdana, sans-serif;
	background: #000;
	background: rgba(0, 0, 0, .8);
	border: 2px solid #fff;
	-webkit-border-radius: 4px;
	-moz-border-radius: 6px;
	-webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.7);
	-moz-box-shadow: 0px 0px 5px rgba(0,0,0,.7);
}

#inv_files ul {
	width: 216px;
	margin: 0;
	padding: 0;
	float: left;
	border: 1px solid #292929;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
}

#inv_files li {
	width: 200px;
	margin: 0;
	padding: 0;
	position: relative;
	float: left;
	font-size: 13px !important;
	line-height: 18px;
	list-style-type: none;
	text-align: left;
	color: #fff;
	text-shadow: 0px 1px 1px rgba(0,0,0, .5);
}

#inv_files ul li.nofiles {
	width: 200px;
	padding: 5px 8px;
}

#inv_files ul li a {
	width: 200px;
	padding: 5px 8px;
	float: left;
	overflow: hidden;
	text-overflow: ellipsis;
	text-decoration: none;
	color: #fff;
}

#inv_files ul li a:hover,
#inv_files ul li.active a {
	background: #7e868d;
	background: #7e868d -webkit-gradient(linear, left top, left bottom, from(#7e868d), to(#606973)) top left no-repeat;
	color: #fff;
}

#inv_files ul li .sub {
	position: absolute;
	bottom: 0;
	left: -220px;
	display: none;
	background: #000;
	background: rgba(0,0,0,.8);
	font-family: "Lucida Grande", Arial, Verdana, sans-serif;
	background: rgba(0, 0, 0, .8);
	border: 2px solid rgba(250,250,250,.8);
	-webkit-border-radius: 4px;
	-moz-border-radius: 6px;
	-webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.7);
	-moz-box-shadow: 0px 0px 5px rgba(0,0,0,.7);
}

#inv_files ul li:hover .sub {
	display: block;
}

#inv_files li:first-child a {
	-webkit-border-top-left-radius: 2px;
	-webkit-border-top-right-radius: 2px;
	-moz-border-radius-topright: 2px;
	-moz-border-radius-topleft: 2px;
}

#inv_files ul li:last-child a {
	-webkit-border-bottom-left-radius: 2px;
	-webkit-border-bottom-right-radius: 2px;
	-moz-border-radius-bottomright: 2px;
	-moz-border-radius-bottomleft: 2px;
}

.arrow {
	position: absolute;
	top: 10px;
	right: -10px;
}

